Fixed to work with classes moved to crosswire-java repo

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,10 @@
 TOMCAT_HOME=/usr/local/tomcat
 instdir=../webapp
 
-all: ${instdir}/WEB-INF/classes/org/crosswire/web/i18n/TranslateTag.class
+all: ${instdir}/WEB-INF/classes/org/crosswire/swordweb/PerseusUtils.class
 
-${instdir}/WEB-INF/classes/org/crosswire/web/i18n/TranslateTag.class: org/crosswire/web/i18n/TranslateTag.java
-	javac -classpath ${TOMCAT_HOME}/common/lib/jsp-api.jar:${TOMCAT_HOME}/common/lib/servlet-api.jar:${instdir}/WEB-INF/classes:${instdir}/WEB-INF/lib/greekconverter.jar -d ${instdir}/WEB-INF/classes -sourcepath . ./org/crosswire/web/i18n/*.java ./org/crosswire/utils/*.java ./org/crosswire/swordweb/*.java
+${instdir}/WEB-INF/classes/org/crosswire/swordweb/PerseusUtils.class: org/crosswire/swordweb/PerseusUtils.java
+	javac -classpath ${TOMCAT_HOME}/common/lib/jsp-api.jar:${TOMCAT_HOME}/common/lib/servlet-api.jar:${instdir}/WEB-INF/classes:${instdir}/WEB-INF/lib/greekconverter.jar:${instdir}/WEB-INF/lib/crosswire.jar -d ${instdir}/WEB-INF/classes -sourcepath . ./org/crosswire/swordweb/*.java
 
 clean:
-	rm -rf ${instdir}/WEB-INF/classes/org/crosswire/web/*
+	rm -rf ${instdir}/WEB-INF/classes/org/crosswire/swordweb/*
