updated swordweb i18n added rss example

--- a/webapp/WEB-INF/classes/trans_pt-br.properties
+++ b/webapp/WEB-INF/classes/trans_pt-br.properties
@@ -1,8 +1,8 @@
-#Wed Aug 08 23:02:28 MST 2007
+#Sat Aug 11 12:54:52 MST 2007
 1397839042=What is power search?
 1121727836=Textos B\u00EDblicos
 80048383=OUTRAS FERRAMENTAS B\u00CDBLICAS
--26833613=
+-26833613=Unbound Bible,
 84883943=ENVIE TEXTOS
 -1247791591=Unbound Bible
 -1860636657=Of course we&rsquo;re kidding. No, verses are not missing. However, some verses appear as footnotes in certain translations, because they weren&rsquo;t present in the earliest or most reliable manuscripts. To view these verses, you need to view the entire chapter or any span of verses that includes the verse directly preceding the apparent "missing" verse.
@@ -33,7 +33,7 @@
 1113579794=
 92048783=Coment\u00E1rios
 -742621714=Centro de Pesquisas da B\u00EDblia (em ingl\u00EAs)
--1900473501=
+-1900473501=Crosswalk,
 1663949596=
 15980382=You can get CrossWire SWORD software, on which this tool was built, by getting in touch with 
 -892589591=Crosswalk
@@ -70,6 +70,7 @@
 82664747=Visit
 -1998487659=O que \u00E9 "Estudo Paralelo"?
 1778673885=Saiba Mais...
+21554807=
 -2128886081=As Tradu\u00E7\u00F5es Preferidas podem ser selecionadas a partir da aba Prefer\u00EAncias
 1258901926=Ver Todas
 -294197045=Cap\u00EDtulo atual
@@ -81,12 +82,12 @@
 649821751=Estudo de Passagens
 1850809233=Word study allows you to focus more on the meaning of a particular word within the text. One way to do that is by using Strong&rsquo;s Numbers and reviewing the Morphology of the word.
 1147145891=BIBLICAL QUESTIONS
-230718181=
+230718181=The SWORD Project,
 -640431634=What does &ldquo;Printer Friendly&rdquo; mean?
 -195667765=DOWNLOADS
 771580917=Can I download Bible Tool Bibles and other content?
 1594652557=Power search allows you to expand on the basic passage search functionality. This includes searching by sentence fragments, or exact phrase. You can also use whatever syntax you like in limiting your search range to specific sections, such as in Revelations chapters 1-5.
-849261155=
+849261155=Esconder Notas
 -1762719186=What does &ldquo;printer friendly&rdquo; mean?
 -1439463711=The software is a combined project of the 
 -1121905749=The Bible Tool is part of a larger initiative co-sponsored by ABS and the SBL to allow people to approach the Bible on their terms, in the culture, community, context, media and format of their choice. This tool will evolve in the coming months / years to help us reach that goal.
@@ -156,11 +157,11 @@
 -1969911958=
 -1712078863=Muitas B\u00EDblias suportam o estudo na l\u00EDngua original apenas clicando em qualquer palavra no texto
 -1875396253=
--765286346=
+-765286346=Ferramentas de Estudo\:
 462830383=
 148412459=APPROPRIATE USE AND PERMISSIONS
 -2076462760=
-1633207700=
+1633207700=Bible Gateway,
 -1050723907=Coment\u00E1rios Preferidos
 -1690398936=
 -1696462307=
@@ -176,7 +177,7 @@
 1921124920=Esta p\u00E1gina possui impress\u00E3o amig\u00E1vel
 978829617=
 -283673852=Pergaminho
--707528937=
+-707528937=e Blue Letter Bible
 -2141571999=if you download the SWORD tool. As we add modern translations to the tool, some restrictions determined by the organizations that hold the license for the content will apply. You can copy some Biblical material from the online Bibles, as long as you follow copyright restrictions.
 449930511=USING THE BIBLE TOOL
 1670666548=The texts can be printed in a printer-friendly way, without including all the other information on the page. You can produce a diglot by printing two Bible translations side by side. Additional translations would produce a polyglot. We hope to allow you to edit the formatting of your diglot or polyglot scripture portion in the future (hopefully early Spring).
