heavily commented sample configuration

--- a/webapp/WEB-INF/swordweb.properties
+++ b/webapp/WEB-INF/swordweb.properties
@@ -1,2 +1,113 @@
-orbexe=/usr/bin/swordorbserver
-defaultBible=KJV
+# This is the main configuration of your new Swordweb installation. Please alter it according to your site's needs and desires.
+# we have tried hard to have all relevant user configurable items in this page, allowing you to seemlessly deploy and upgrade your site wherever you like.
+# We have also tried to make it easy for you to integrate new pages created by yourself without you having to alter the code of the application itself.  
+# Path to swordorbserver and configuration file for sword. 
+# Chosing a specific configuration per site allows one to run several incarnations of swordweb on the same server
+
+orbexe=swordorbserver -sysConf /home/refdoc/sword.conf
+
+# Default language of the site and all languages on offer. 
+# If a site offeres several languages these should be in a space separated list
+# language codes are those of ISO 632-(1-3)
+
+defaultLang=fa
+offeredLanguages=fa en_US arm az_IR
+
+# default Bible - this should be the Sword Module ID. This Bible module will be used for searches etc until the user has chosen a different preference
+
+defaultBible=FarsiOPV
+
+# default CSS style sheet and list of other style sheets on offer. 
+# Each entry in the list should contain a name and a link 
+
+defaultStyle=Washed Out
+
+offeredCSS.Name.0=Washed Out
+offeredCSS.Link.0=wash.css
+offeredCSS.Name.1=Parchment
+offeredCSS.Link.1=parchment.css
+offeredCSS.Name.2=Sandy Desert
+offeredCSS.Link.2=sandy.css
+
+# list of tabs/pages offered by the application. Each entry consists of four fields. 
+
+offeredTabName.0=Home
+offeredTabTitle.0=Home
+offeredTabLink.0=index.jsp
+offeredTabDefault.0=true
+
+offeredTabName.1=Passage Study
+offeredTabTitle.1=Passage Study
+offeredTabLink.1=passagestudy.jsp
+offeredTabDefault.1=true
+
+offeredTabName.2=Parallel
+offeredTabTitle.2=Parallel Display
+offeredTabLink.2=parallelstudy.jsp
+offeredTabDefault.2=true
+
+offeredTabName.3=Power Search
+offeredTabTitle.3=Power Search
+offeredTabLink.3=powersearch.jsp
+offeredTabDefault.3=true
+
+offeredTabName.4=Daily Devotionals
+offeredTabTitle.4=Daily Devotionals
+offeredTabLink.4=dailydevotion.jsp
+offeredTabDefault.4=true
+
+offeredTabName.5=Library
+offeredTabTitle.5=Full Library
+offeredTabLink.5=fulllibrary.jsp
+offeredTabDefault.5=true
+
+offeredTabName.6=Preferences
+offeredTabTitle.6=Preferences
+offeredTabLink.6=preferences.jsp
+offeredTabDefault.6=true
+
+offeredTabName.7=About
+offeredTabTitle.7=About
+offeredTabLink.7=about.jsp
+offeredTabDefault.7=true
+
+offeredTabName.8=Help
+offeredTabTitle.8=Help
+offeredTabLink.8=help.jsp
+offeredTabDefault.8=true
+
+# The above tab list describes all tabs on offer in the default application. 
+# You can add further tabs simply by defining them here and adding the jsp into the application folder.
+#
+### This is ythe name given to your page by the browser if your visitors use a tabbing broswer 
+# offeredTabName.9=My tab name
+#
+### This is the title used for your page and all links to it within the site.
+# offeredTabTitle.9=My Tab page title
+#
+### it makes sense to keep your own pages together in one place.
+# offeredTabLink.9=userpages/mytab.jsp
+#
+### enable your page by default ('true') or not (any other value).
+## offeredTabDefault.9=true
+#
+# Make sure that the page actually exists before you enable it here. For examples how to create new pages look at the existing ones and 
+# at the examples folder in the application folder
+
+
+# List of links used on the index page. Use this to link to affiliates or other relevant websites. Should you list nothing here a list of defaults is loaded.
+
+offeredLinkName.0=Glasgow Iranian Church
+offeredLinkAddress.0=http://www.gichurch.org
+
+offeredLinkName.1=K\u00F6rp\u00FC
+offeredLinkAddress.1=http://www.korpu.net
+
+offeredLinkName.2=CrossWire Bible Society
+offeredLinkAddress.2=http://www.crosswire.org
+
+# List of meta keywords. These words in a comma separated list will (hopefully) improve search ranking and specificity of your site.
+
+metaKeywords= Jesus, Christ, Church, Bible, Iran, Persian, Persia, Azeri, Azerbaijan, Armenian, God, Gospel
+
+
