updating of sample configuration file

--- a/webapp/WEB-INF/swordweb.properties
+++ b/webapp/WEB-INF/swordweb.properties
@@ -13,9 +13,11 @@ orbexe=swordorbserver -sysConf /home/refdoc/sword.conf
 defaultLang=fa
 offeredLanguages=fa en_US arm az_IR
 
-# default Bible - this should be the Sword Module ID. This Bible module will be used for searches etc until the user has chosen a different preference
+# default modules - this should be the Sword Module ID. These modules will be used for searches etc until the user has chosen a different preference
 
 defaultBible=FarsiOPV
+defaultDevo=DBD
+defaultComm=TSK
 
 # default CSS style sheet and list of other style sheets on offer. 
 # Each entry in the list should contain a name and a link 
