Commented out some examples in swordweb.properties added chapter intro processing to passagestudy

--- a/webapp/WEB-INF/swordweb.properties
+++ b/webapp/WEB-INF/swordweb.properties
@@ -4,20 +4,20 @@
 # Path to swordorbserver and configuration file for sword. 
 # Chosing a specific configuration per site allows one to run several incarnations of swordweb on the same server
 
-orbexe=swordorbserver -sysConf /home/refdoc/sword.conf
+#orbexe=swordorbserver -sysConf /home/refdoc/sword.conf
 
 # Default language of the site and all languages on offer. 
 # If a site offeres several languages these should be in a space separated list
 # language codes are those of ISO 632-(1-3)
 
-defaultLang=fa
-offeredLanguages=fa en_US arm az_IR
+#defaultLang=fa
+#offeredLanguages=fa en_US arm az_IR
 
 # default modules - this should be the Sword Module ID. These modules will be used for searches etc until the user has chosen a different preference
 
-defaultBible=FarsiOPV
-defaultDevo=DBD
-defaultComm=TSK
+#defaultBible=FarsiOPV
+#defaultDevo=DBD
+#defaultComm=TSK
 
 # default CSS style sheet and list of other style sheets on offer. 
 # Each entry in the list should contain a name and a link 
