Applying livehtml/ patches to svn HEAD

--- a/webapp/WEB-INF/swordweb.properties
+++ b/webapp/WEB-INF/swordweb.properties
@@ -13,8 +13,9 @@
 #defaultLang=fa
 #offeredLanguages=fa en_US arm az_IR
 
-# default modules - this should be the Sword Module ID. These modules will be used for searches etc until the user has chosen a different preference
+# default modules - this should be the SWORD Module ID. These modules will be used for searches etc until the user has chosen a different preference
 
+defaultBible=NASB
 #defaultBible=FarsiOPV
 #defaultDevo=DBD
 #defaultComm=TSK
