Updated for CrossWire's live site

--- a/webapp/WEB-INF/swordweb.properties
+++ b/webapp/WEB-INF/swordweb.properties
@@ -100,17 +100,29 @@ offeredTabDefault.8=true
 
 # List of links used on the index page. Use this to link to affiliates or other relevant websites. Should you list nothing here a list of defaults is loaded.
 
-offeredLinkName.0=Glasgow Iranian Church
-offeredLinkAddress.0=http://www.gichurch.org
+offeredLinkName.0=Bible Research Center
+offeredLinkAddress.0=http://bibleresources.americanbible.org/bible-resources/bible-resource-center
 
-offeredLinkName.1=K\u00F6rp\u00FC
-offeredLinkAddress.1=http://www.korpu.net
+offeredLinkName.1=CrossWire Bible Society
+offeredLinkAddress.1=http://www.crosswire.org
 
-offeredLinkName.2=CrossWire Bible Society
-offeredLinkAddress.2=http://www.crosswire.org
+offeredLinkName.2=United Bible Societies
+offeredLinkAddress.2=http://www.biblesociety.org
+
+offeredLinkName.3=American Bible Society
+offeredLinkAddress.3=http://www.americanbible.org
+
+offeredLinkName.4=Society of Biblical Literature
+offeredLinkAddress.4=http://sbl-site.org
+
+offeredLinkName.5=The SWORD Project
+offeredLinkAddress.5=http://crosswire.org/sword
+
+offeredLinkName.6=OSIS
+offeredLinkAddress.6=http://www.bibletechnologies.net
 
 # List of meta keywords. These words in a comma separated list will (hopefully) improve search ranking and specificity of your site.
 
-metaKeywords= Jesus, Christ, Church, Bible, Iran, Persian, Persia, Azeri, Azerbaijan, Armenian, God, Gospel
+metaKeywords= Jesus, Christ, Church, Bible, Iran, Persian, Persia, Azeri, Azerbaijan, Armenian, God, Gospel, CrossWire, Java, Web
 
 
