--- a/webapp/WEB-INF/swordweb.properties
+++ b/webapp/WEB-INF/swordweb.properties
@@ -123,6 +123,6 @@ offeredLinkAddress.6=http://www.bibletechnologies.net
 
 # List of meta keywords. These words in a comma separated list will (hopefully) improve search ranking and specificity of your site.
 
-metaKeywords= Jesus, Christ, Church, Bible, Iran, Persian, Persia, Azeri, Azerbaijan, Armenian, God, Gospel, CrossWire, Java, Web
+metaKeywords= Jesus, Christ, Church, Bible, Iran, Persian, Persia, Azeri, Azerbaijan, Armenian, God, Gospel, CrossWire, Java, Web, Software
 
 
