Not sure why this CSS name changed.  Does someone like Desert better than Creek? :)

--- a/webapp/WEB-INF/swordweb.properties
+++ b/webapp/WEB-INF/swordweb.properties
@@ -29,7 +29,7 @@ offeredCSS.Name.0=Washed Out
 offeredCSS.Link.0=wash.css
 offeredCSS.Name.1=Parchment
 offeredCSS.Link.1=parchment.css
-offeredCSS.Name.2=Sandy Desert
+offeredCSS.Name.2=Sandy Creek
 offeredCSS.Link.2=sandy.css
 
 # list of tabs/pages offered by the application. Each entry consists of four fields. 
