Turned off some tabs by default

--- a/webapp/WEB-INF/swordweb.properties
+++ b/webapp/WEB-INF/swordweb.properties
@@ -62,7 +62,7 @@ offeredTabDefault.4=true
 offeredTabName.5=Library
 offeredTabTitle.5=Full Library
 offeredTabLink.5=fulllibrary.jsp
-offeredTabDefault.5=true
+offeredTabDefault.5=false
 
 offeredTabName.6=Preferences
 offeredTabTitle.6=Preferences
@@ -72,7 +72,7 @@ offeredTabDefault.6=true
 offeredTabName.7=About
 offeredTabTitle.7=About
 offeredTabLink.7=about.jsp
-offeredTabDefault.7=true
+offeredTabDefault.7=false
 
 offeredTabName.8=Help
 offeredTabTitle.8=Help
