Added Eusebian Canon Table lookups This adds jquery as a dependency, which sucks but is probably worth it; time will tell.

--- a/webapp/WEB-INF/swordweb.properties
+++ b/webapp/WEB-INF/swordweb.properties
@@ -11,7 +11,7 @@
 # language codes are those of ISO 632-(1-3)
 
 #defaultLang=fa
-offeredLanguages=en_US fa arm az_IR el nl pt_BR zh_CN tr
+offeredLanguages=en_US fa arm az_IR el nl pt_BR zh_CN tr cz
 
 # default modules - this should be the SWORD Module ID. These modules will be used for searches etc until the user has chosen a different preference
 
@@ -59,25 +59,30 @@ offeredTabTitle.4=Daily Devotionals
 offeredTabLink.4=dailydevotion.jsp
 offeredTabDefault.4=true
 
-offeredTabName.5=Library
-offeredTabTitle.5=Full Library
-offeredTabLink.5=fulllibrary.jsp
-offeredTabDefault.5=false
+offeredTabName.5=Gospel Harmony
+offeredTabTitle.5=Gospel Harmony
+offeredTabLink.5=eusebian.jsp
+offeredTabDefault.5=true
 
-offeredTabName.6=Preferences
-offeredTabTitle.6=Preferences
-offeredTabLink.6=preferences.jsp
-offeredTabDefault.6=true
+offeredTabName.6=Library
+offeredTabTitle.6=Full Library
+offeredTabLink.6=fulllibrary.jsp
+offeredTabDefault.6=false
 
-offeredTabName.7=About
-offeredTabTitle.7=About
-offeredTabLink.7=about.jsp
-offeredTabDefault.7=false
+offeredTabName.7=Preferences
+offeredTabTitle.7=Preferences
+offeredTabLink.7=preferences.jsp
+offeredTabDefault.7=true
 
-offeredTabName.8=Help
-offeredTabTitle.8=Help
-offeredTabLink.8=help.jsp
-offeredTabDefault.8=true
+offeredTabName.8=About
+offeredTabTitle.8=About
+offeredTabLink.8=about.jsp
+offeredTabDefault.8=false
+
+offeredTabName.9=Help
+offeredTabTitle.9=Help
+offeredTabLink.9=help.jsp
+offeredTabDefault.9=true
 
 # The above tab list describes all tabs on offer in the default application. 
 # You can add further tabs simply by defining them here and adding the jsp into the application folder.
