--- a/webapp/WEB-INF/swordweb.properties
+++ b/webapp/WEB-INF/swordweb.properties
@@ -11,7 +11,7 @@
 # language codes are those of ISO 632-(1-3)
 
 #defaultLang=fa
-offeredLanguages=en_US fa arm az_IR el nl pt_BR zh_CN tr cz
+offeredLanguages=en_US fa arm az_IR cz el nl pt_BR ru tr zh_CN
 
 # default modules - this should be the SWORD Module ID. These modules will be used for searches etc until the user has chosen a different preference
 
